ginkgo: overlay: Disable Adaptive Connectivity preference
* We neither ship CTPM and nor have 5G

Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: Fiqri Ardyansyah <fiqri15072019@gmail.com>

--- a/overlay/packages/apps/Settings/res/values/arrow_config.xml
+++ b/overlay/packages/apps/Settings/res/values/arrow_config.xml
@@ -22,5 +22,8 @@
     <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
 
     <!-- Smart Charging -->
-    <bool name="config_supportSmartCharging">true</bool>
+    <bool name="config_supportSmartCharging">false</bool>
+
+    <!-- Whether to show the Preference for Adaptive connectivity -->
+    <bool name="config_show_adaptive_connectivity">false</bool>
 </resources>
