--- a/overlay/packages/apps/Settings/res/values/custom_config.xml
+++ b/overlay/packages/apps/Settings/res/values/custom_config.xml
@@ -22,5 +22,5 @@
     <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
 
     <!-- Smart Charging -->
-    <bool name="config_supportSmartCharging">true</bool>
+    <bool name="config_supportSmartCharging">false</bool>
 </resources>
