--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -44,4 +44,8 @@
          should be either LOW (1) or HIGH (3).
     -->
     <integer name="config_vibration_supported_intensity_levels">3</integer>
+    
+    <!-- PEX Maintainer -->
+    <string name="pex_maintainer_name" translatable="false">GioKas93</string>
+    <string name="pex_maintainer_group" translatable="false">https://t.me/pexginkowillow</string>
 </resources>
