--- a/overlay/frameworks/base/core/res/res/values/arrow_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/arrow_config.xml
@@ -35,13 +35,9 @@
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">false</bool>
 
-    <!-- Smart charging -->
+    <!-- Smart charging 
     <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
     <string name="config_SmartChargingSuspendValue" translatable="false">1</string>
-    <string name="config_SmartChargingResumeValue" translatable="false">0</string>
+    <string name="config_SmartChargingResumeValue" translatable="false">0</string>-->
 
-    <!-- Default value for proximity check on screen wake
-     NOTE ! - Enable for devices that have a fast response proximity sensor (ideally < 300ms)-->
-    <bool name="config_proximityCheckOnWake">true</bool>
-    <bool name="config_proximityCheckOnWakeEnabledByDefault">true</bool>
 </resources>
